# Codigo-Uco

1año/Introducción a la Programación/: Ej1(miscelaneo).cpp  Ej1(parte2).cpp  Ej1(parte2).eje  Ej1.cpp  Ej1.eje  Ej1_miscelaneo.cpp  Ej1_miscelaneo.eje  Ej2(miscelaneo).cpp  Ej2_miscelaneo.cpp  Ej2_miscelaneo.eje  Ej3(miscelaneo).cpp  Ej3_miscelaneo.cpp  Ej3_miscelaneo.eje  Ej4_miscelaneo.cpp  Ej4_miscelaneo.eje  EjBase_de_datos.cpp  EjBase_de_datos.cxx
1año/Metodología de la Programación/: ej_10.cpp  makefile  makefile2
2año/PAS/: Práctica 1 Apache - Presentación.pptx
4año/DASP/: control_display.ucf
4año/IP/: Gomez_Gimenez_Antoniop6.c  Programa_Numeros_Primos.txt
5año/RAP/: 2.1.4.4 Packet Tracer - Configure VLANs, VTP, and DTP.pka  2.2.2.4 Packet Tracer - Configuring IPv4 Static and Default Routes.pka  2.3.2.6 Packet Tracer - Configuring PAP and CHAP Authentication.pka  3.3.2.2 Packet Tracer - Configuring Rapid PVST (1).pka  4.2.1.3 Packet Tracer - Configuring EtherChannel.pka  4.3.2.6 Packet Tracer - Configuring IPv6 ACLs.pka  5.2.2.7 Packet Tracer - Configuring Switch Port Security.pka  6.2.2.4 Packet Tracer - Configuring Basic EIGRP with IPv4.pka  6.2.2.4 Packet Tracer - Configuring Trunks.pka  6.4.3.4 Packet Tracer - Configuring Basic EIGRP with IPv6 Routing.pka  7.2.1.6 Packet Tracer Configuring Numbered Standard IPv4 ACLs.pka  p1.pka  p10pvst.pka  (+23 more)
MASTER UNIVERSITARIO EN INTELIGENCIA COMPUTACIONAL E INTERNET DE LAS COSAS/Vision 3D y Aplicaciones(V3D)/Semana2/Practica6/: CMakeLists.txt
Vision 3D y Aplicaciones(V3D)/Semana2/Practica2/: CMakeLists.txt
(+1910 files in other folders)
